[FIX] - client error handling (#73)
* Add sonner toast

* Regenerate types

* Add error helper functions

* wip: client error interceptor

* Implement client interceptor error handling

* Add tanstack form and route errors

* Add error handling to delete-dialog.tsx

* Add error handling to new.tsx and edit.tsx

* Add Error Boundary components: FullScreen and Inline to new.tsx, edit.tsx, add-set-dialog.tsx and recent-set-dialog.tsx

* Update z-index of error-boundary.tsx, explore moving data to loaders instead of using useSuspenseQuery

* Delete dialog changes: move functions to separate files, remove error render text. new.tsx: suppress component toast message: global toast will handle

* add rep validation and logic: submit disabled until number inputted

* remove onError callback from new.tsx and edit.tsx route

* Fix frontend unit tests

* Remove 500 response from client interceptor. Use query client for toast errors

* Update dialog delete mutations to skipGlobalErrorHandler

* Add unit tests. Update add-set-dialog-tsx button logic.

* Cleanup files

* Cleanup files
